# qiwo-ibusr

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  INSTALL.md  Makefile  ibus_rime.yaml  install-linux.sh  qiwo-webdav-settings.desktop.in  qiwo.xml.in  qiwo_input_format_bridge.c  qiwo_input_format_bridge.h  qiwo_rime_default_config.c  qiwo_rime_default_config.h  qiwo_sync.py  qiwo_sync_command.c  qiwo_sync_command.h  qiwo_sync_ipc.c  qiwo_sync_ipc.h  qiwo_webdav_config.c  qiwo_webdav_config.h  qiwo_webdav_settings.c  rime_config.h.in  rime_engine.c  rime_engine.h  rime_main.c  rime_settings.c  rime_settings.h  setup.sh
.github/workflows/: commit-ci.yml  pull-request-ci.yml  release-ci.yml
cmake/: FindRimeData.cmake
scripts/: setup-linux-deps.sh
tests/: test_input_format_packaging.sh  test_install_linux_sync_core.sh  test_qiwo_rime_default_config.c  test_qiwo_sync_command.c  test_qiwo_sync_py.py  test_qiwo_webdav_config.c  test_rime_settings.c  test_switcher_auto_spacing_option.sh  test_sync_core_dependencies.sh  test_sync_core_file_selector.sh  test_sync_core_packaging.sh
tests/stubs/: ibus.h  rime_api.h  rime_config.h
